fix remote header on mobile

--- a/apps/server/app/(payload)/custom.scss
+++ b/apps/server/app/(payload)/custom.scss
@@ -211,6 +211,10 @@ aside.nav {
     padding-top: 64px;
   }
 
+  .remote-page-content {
+    padding-top: 52px;
+  }
+
   .collection-list__tables {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
